docs: update requirements and techspecs

--- a/docs/ba/latex/crystal.tex
+++ b/docs/ba/latex/crystal.tex
@@ -86,4 +86,4 @@ C_{L1} = C_{L2} = 2 \cdot (10pF-3pF) = 14pF
 
 This results in a practical value that is readily available on the market:
 
-\url{https://www.mouser.de/ProductDetail/KYOCERA-AVX/04023U140GAT2A?qs=ZwvTZoB9SO8Z%2FQAWMtnEbw%3D%3D}
+\url{https://www.mouser.de/ProductDetail/NDK/NX2520SA-24.000000MHZ-B8?qs=w%2Fv1CP2dgqqDWn8DJbh9qA%3D%3D}
