--- a/docs/project_management/projectplan.tex
+++ b/docs/project_management/projectplan.tex
@@ -1,12 +1,12 @@
 \section*{Project Plan - Hardware Rev2}
 
-\section{Hardware (Week 1, Milestone \hyperref[ms:M1]{M1})}
+\subsection*{Hardware (Week 1, Milestone \hyperref[ms:M1]{M1})}
 \begin{itemize}
     \item Order and assemble \textbf{Hardware Revision 2} (\hyperref[wp:P1]{P1}).
     \item Verify correct assembly and power integrity (\hyperref[wp:P1]{P1}).
 \end{itemize}
 
-\section{Functional Testing (Week 2--3, Milestone \hyperref[ms:M1]{M1})}
+\subsection*{Functional Testing (Week 2--3, Milestone \hyperref[ms:M1]{M1})}
 \begin{itemize}
     \item Validate core functionality of the module (\hyperref[wp:P1]{P1}, \hyperref[wp:P13]{P13}):
     \begin{itemize}
@@ -44,7 +44,7 @@
     \end{itemize}
 \end{itemize}
 
-\section{Audio Engine (Week 4, Milestone \hyperref[ms:M2]{M2})}
+\subsection*{Audio Engine (Week 4, Milestone \hyperref[ms:M2]{M2})}
 \begin{itemize}
     \item Implement usable I\textsuperscript{2}C drivers for the audio codec (\hyperref[wp:P2]{P2}).
     \item Set up double-buffered audio I/O (\hyperref[wp:P3]{P3}).
@@ -62,14 +62,14 @@
     \end{itemize}
 \end{itemize}
 
-\section{DSP Development (Week 5--6, Milestone \hyperref[ms:M2]{M2})}
+\subsection*{DSP Development (Week 5--6, Milestone \hyperref[ms:M2]{M2})}
 \begin{itemize}
     \item Implement real-time DSP algorithms (\hyperref[wp:P4]{P4}).
     \item Implement or integrate an IIR filter from the CMSIS library (\hyperref[wp:P4]{P4}).
     \item Implement basic granular synthesis functionality if time permits (\hyperref[wp:P4]{P4}).
 \end{itemize}
 
-\section{Control Interface (Week 7, Milestone \hyperref[ms:M3]{M3})}
+\subsection*{Control Interface (Week 7, Milestone \hyperref[ms:M3]{M3})}
 \begin{itemize}
     \item Implement control inputs:
     \begin{itemize}
@@ -79,7 +79,7 @@
     \end{itemize}
 \end{itemize}
 
-\section{User Interface (Week 8, Milestone \hyperref[ms:M3]{M3})}
+\subsection*{User Interface (Week 8, Milestone \hyperref[ms:M3]{M3})}
 \begin{itemize}
     \item Integrate and test faders (\hyperref[wp:P9]{P9}).
     \item Implement RGB LED control (\hyperref[wp:P11]{P11}).
