--- a/docs/project_management/pflichtenheft.tex
+++ b/docs/project_management/pflichtenheft.tex
@@ -120,7 +120,7 @@ Successful acceptance requires fulfillment of all acceptance criteria defined in
 \subsubsection*{Additional Information}
 The system architecture is designed to allow reuse and extension for future MCU-based Eurorack modules.
 
-\section*{Work Packages and Milestones}
+\section{Work Packages and Milestones}
 
 \subsubsection*{Work Packages}
 \begin{tabular}{|c|p{10cm}|}
