--- a/docs/project_management/projectplan.tex
+++ b/docs/project_management/projectplan.tex
@@ -1,4 +1,4 @@
-\section*{Project Plan - Hardware Rev2}
+\section{Project Plan}
 
 \subsection*{Hardware (Week 1, Milestone \hyperref[ms:M1]{M1})}
 \begin{itemize}
