--- a/docs/project_management/main.tex
+++ b/docs/project_management/main.tex
@@ -15,6 +15,7 @@
 \usepackage{amsmath}
 \usepackage{siunitx}
 \usepackage{appendix}
+\usepackage{placeins}
 
 \setminted{
 	breaklines,
@@ -30,7 +31,7 @@
     
 }
 \author{Jonas Bengt Lux}
-\date{2025-12-30}
+\date{2026-01-08}
 
 \begin{document}
 	
