--- a/docs/ba/latex/interpolation.tex
+++ b/docs/ba/latex/interpolation.tex
@@ -21,14 +21,14 @@ The interpolation of the sample rate is described by a factor \(M\).
 The upsampled signal is:
 
 %TODO: are these functions correct? Source
-
-\[
-y[n] =
-\begin{cases}
-	x[n/M], & n \text{ multiple of } M \\
-	0, & \text{otherwise}
-\end{cases}
-\]
+%
+%\[
+%y[n] =
+%\begin{cases}
+%	x[n/M], & n \text{ multiple of } M \\
+%	0, & \text{otherwise}
+%\end{cases}
+%\]
 
 %TODO add in block diagrams of filter -> interpolator , and decimator -> filter
 % sinc interpolator briefly explained?.
