wip: intermediate push

--- a/docs/ba/latex/main.tex
+++ b/docs/ba/latex/main.tex
@@ -103,6 +103,7 @@ Audio and CV signal flow (Analog signals)
 \subsubsection{Power and safety tests}
 
 \subsubsection{Signal integrity measurements}
+\input{input_signal_test.tex}
 
 \subsubsection{Noise and distortion measurements}
 
